9.392:assignees list & getTopAssignees API result to be project-dependent
